src/objects/Shares__c.object
<CustomObject>
    <description>Share Capital SH19 Dependency</description>
    <fields>
        <fullName>ActiveData__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ActiveData</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AggValueLessAuthMin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>the aggregate nominal value of the company’s allotted share capital is not
less than the authorised minimum.
SH50</description>
        <label>AggValueLessAuthMin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aggregate_nominal_value_New__c</fullName>
        <label>Aggregate nominal value New</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aggregate_nominal_value__c</fullName>
        <label>Aggregate nominal value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AssignmentDate__c</fullName>
        <label>AssignmentDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Class_of_Share_new__c</fullName>
        <label>Class of Share new</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_of_Shares__c</fullName>
        <label>Class of Shares</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Shares Date field</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NewNominalValu__c</fullName>
        <label>NewNominalValue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Shares__c</fullName>
        <label>Number of Shares</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OldNominalValue__c</fullName>
        <label>OldNominalValue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrelimExpense__c</fullName>
        <label>PrelimExpense</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prescribed_Particulars__c</fullName>
        <label>Prescribed Particulars</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SHARETYPE__c</fullName>
        <label>SHARETYPE</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signatory__c</fullName>
        <label>Signatory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_aggregate_amount_paid__c</fullName>
        <label>Total aggregate amount paid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_aggregate_amount_unpaid__c</fullName>
        <label>Total aggregate amount unpaid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <label>Transaction</label>
        <referenceTo>Transaction__c</referenceTo>
        <relationshipLabel>Shares</relationshipLabel>
        <relationshipName>Shares</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>amountPaidUp__c</fullName>
        <label>amountPaidUp</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>benefitGiven__c</fullName>
        <label>benefitGiven</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cancelled_shares__c</fullName>
        <defaultValue>false</defaultValue>
        <label>cancelled shares</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>considerationGiven__c</fullName>
        <label>considerationGiven</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>newNumSharesIssued__c</fullName>
        <label>newNumSharesIssued</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>oldNumSharesIssued__c</fullName>
        <label>oldNumSharesIssued</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redenominateDate__c</fullName>
        <label>redenominateDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>reduceCapitalDate__c</fullName>
        <label>reduceCapitalDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>totalNumAggregate__c</fullName>
        <label>totalNumAggregate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>totalNumofShares__c</fullName>
        <label>totalNumofShares</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>valOfStock__c</fullName>
        <label>valOfStock</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>varationField__c</fullName>
        <label>varationField</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Share</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Prescribed_Particulars__c</columns>
        <columns>Class_of_Shares__c</columns>
        <columns>Currency__c</columns>
        <columns>Number_of_Shares__c</columns>
        <columns>ActiveData__c</columns>
        <columns>Aggregate_nominal_value__c</columns>
        <columns>Transaction__c</columns>
        <columns>Total_aggregate_amount_unpaid__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Shares Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shares</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>